--- a/style.css
+++ b/style.css
@@ -19,4 +19,6 @@
     display: inline-block; 
     margin: 0 20px;
     font-size: 25px ;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif, 'Arial Narrow', Arial, sans-serif
+
 }
