--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@
     margin: 0;
     padding: 0 ;
 }
+body{
+    font-family: "Poppins", sans-serif;
+}
 
 .cabeçalho{
     background-color: #546f9e;
@@ -19,7 +22,7 @@
     display: inline-block; 
     margin: 0 20px;
     font-size: 25px ;
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif, 'Arial Narrow', Arial, sans-serif
+
 
 }
 .escola-imagem{
@@ -31,7 +34,7 @@
     justify-content: center;
     align-items: center;
     padding: 24px;
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+   
 }
 .escola-div-conteudo{
     width: 35%;
